Wrapped checkbox on Build tab fixed.

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
@@ -36,7 +36,7 @@
         display: flex;
 
         .checkbox-block {
-            width: 20%;
+            margin-right: 15px;
         }
     }
 
